fix vertical-align

--- a/assets/sass/_buttons.scss
+++ b/assets/sass/_buttons.scss
@@ -31,6 +31,7 @@
 
 .btn--inline {
   display: inline-block;
+  vertical-align: middle;
 }
 
 .btn--small {
